Added points_sum endpoint
